moved to ARM runners and changes fork settings